update target to net45; DirectAgents.Domain.Entities.Wiki

--- a/1/EomTool/EomToolWeb/Views/Campaigns/Edit.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model DirectAgents.Domain.Entities.Campaign
+﻿@model DirectAgents.Domain.Entities.Wiki.Campaign
 
 @using (Html.BeginForm("Edit", "Campaigns", FormMethod.Post, new {id = "frmEditCampaign"})) {
 
