--- a/1/EomTool/EomToolWeb/Views/Campaigns/ListByCountry.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/ListByCountry.cshtml
@@ -1,5 +1,5 @@
-﻿@model IEnumerable<DirectAgents.Domain.Entities.Country>
-@using DirectAgents.Domain.Entities
+﻿@model IEnumerable<DirectAgents.Domain.Entities.Wiki.Country>
+@using DirectAgents.Domain.Entities.Wiki
 @{
     ViewBag.Title = "Campaigns By Country";
     ViewBag.MenuItem = "ByCountry";
