--- a/1/EomTool/EomToolWeb/Templates/Campaigns/_List.tmpl.htm
+++ b/1/EomTool/EomToolWeb/Templates/Campaigns/_List.tmpl.htm
@@ -35,6 +35,8 @@
             <dd>${EomNotes}</dd>
             <dt>Countries:</dt>
             <dd>${CountryCodes}</dd>
+            <dt>Avail. Budget:</dt>
+            <dd># if(AvailableBudget!=null){ ##= data.RevenueCurrency + kendo.toString(data.AvailableBudget,"n2") ## } #</dd>
         </dl>
     </div>
 </script>
