--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Edit.cshtml
@@ -36,7 +36,7 @@
             </tr>
             <tr>
                 <td>@Html.LabelFor(m => m.BudgetStart)</td>
-                <td>@Html.EditorFor(m => m.BudgetStart)</td>
+                <td>@Html.EditorFor(m => m.BudgetStart, "Date")</td>
             </tr>
         </table>
         <br />
