--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/AdvertiserRow.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/AdvertiserRow.cshtml
@@ -3,6 +3,6 @@
     var adv = Model;
 }
 
-<td>@adv.AdvertiserId</td>
+<td style="text-align:right">@adv.AdvertiserId</td>
 <td>@Html.ActionLink(@adv.AdvertiserName, "Offers", new { advId = @adv.AdvertiserId })</td>
 <td>@adv.Offers.Count <a href="#" onclick="SynchOffers(@adv.AdvertiserId); return false">(synch)</a></td>
