--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Show.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Show.cshtml
@@ -3,7 +3,7 @@
     var offer = Model.Offer;
 }
 
-<h3>Show Offer Budget</h3>
+<h3>@Html.ActionLink("Budgets", "Start") - Show Offer</h3>
 
 @Html.ActionLink("Edit Budget", "Edit", new { offerId = Model.Offer.OfferId })
 <br /><br />
