--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/AdvertiserRow.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/AdvertiserRow.cshtml
@@ -5,5 +5,11 @@
 
 <td>@(adv.AdManager==null ? "" : adv.AdManager.FullName)</td>
 <td style="text-align:right">@adv.AdvertiserId</td>
-<td>@Html.ActionLink(@adv.AdvertiserName, "Offers", new { advId = @adv.AdvertiserId })</td>
-<td>@adv.Offers.Count <a href="#" onclick="SynchOffers(@adv.AdvertiserId); return false">(synch)</a></td>
+<td>@adv.AdvertiserName</td>
+<td>
+    @Html.ActionLink("Show:", "Offers", new { advId = @adv.AdvertiserId })
+    @adv.Offers.Count
+</td>
+<td>
+    <a href="#" onclick="SynchOffers(@adv.AdvertiserId); return false">(synch)</a>
+</td>
