--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Advertisers.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Advertisers.cshtml
@@ -1,5 +1,7 @@
 ﻿@model DirectAgents.Web.Models.BudgetsVM
 
+<h3>@Html.ActionLink("Budgets", "Start") - Advertisers</h3>
+
 @if (Model.AccountManager != null)
 {
     <text>Account Manager: </text>@Model.AccountManager.FullName
@@ -11,7 +13,8 @@
         <th>AdMgr</th>
         <th>AdvId</th>
         <th>Advertiser</th>
-        <th>#Offers</th>
+        <th>Offers</th>
+        <th></th>
     </tr>
 
 @foreach (var adv in Model.Advertisers)
