--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Offers.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Offers.cshtml
@@ -11,6 +11,7 @@
         <th>Budget</th>
         <th>Monthly?</th>
         <th>StartDate</th>
+        <th colspan="2">BudgetUsed</th>
     </tr>
 
 @foreach (var offer in Model)
