--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Offers.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Offers.cshtml
@@ -23,6 +23,9 @@
 
 </table>
 
+<br />
+Initialize = set budget to 0 + include in stats update
+
 @section scripts {
     <script type="text/javascript">
 
