--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Show.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Show.cshtml
@@ -39,6 +39,10 @@
             <td>@Html.LabelFor(m => m.Offer.BudgetStart)</td>
             <td>@Html.DisplayFor(m => m.Offer.BudgetStart, "Date")</td>
         </tr>
+        <tr>
+            <td>@Html.LabelFor(m => m.Offer.BudgetEnd)</td>
+            <td>@Html.DisplayFor(m => m.Offer.BudgetEnd, "Date")</td>
+        </tr>
     </table>
 </fieldset>
 
