--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Edit.cshtml
@@ -38,6 +38,10 @@
                 <td>@Html.LabelFor(m => m.BudgetStart)</td>
                 <td>@Html.EditorFor(m => m.BudgetStart, "Date")</td>
             </tr>
+            <tr>
+                <td>@Html.LabelFor(m => m.BudgetEnd)</td>
+                <td>@Html.EditorFor(m => m.BudgetEnd, "Date")</td>
+            </tr>
         </table>
         <br />
         <input type="submit" value="Save" />
