--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/OfferRow.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/OfferRow.cshtml
@@ -21,6 +21,7 @@
 </td>
 <td style="text-align:center">@offer.BudgetIsMonthlyString</td>
 <td>@Html.DisplayFor(m => m.BudgetStart, "Date")</td>
+<td>@Html.DisplayFor(m => m.BudgetEnd, "Date")</td>
 <td style="text-align:right">
     @if (offer.BudgetUsed.HasValue)
     {
