--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Offers.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Offers.cshtml
@@ -9,10 +9,9 @@
         <th>Offer</th>
         <th></th>
         <th>Budget</th>
-        <th>Monthly?</th>
         <th>StartDate</th>
         <th>EndDate</th>
-        <th colspan="2">BudgetUsed</th>
+        <th colspan="2">Spent</th>
     </tr>
 
 @foreach (var offer in Model)
