--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/OfferRow.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/OfferRow.cshtml
@@ -33,3 +33,5 @@
         @offer.BudgetUsedPercent.Value.ToString("P1")
     }
 </td>
+<td>@offer.OfferStatus.OfferStatusName</td>
+<td>@offer.Hidden</td>
