--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Offers.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Offers.cshtml
@@ -12,6 +12,8 @@
         <th>StartDate</th>
         <th>EndDate</th>
         <th colspan="2">Spent</th>
+        <th>Status</th>
+        <th>Hidden</th>
     </tr>
 
 @foreach (var offer in Model)
