--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/AdvertiserRow.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/AdvertiserRow.cshtml
@@ -7,9 +7,8 @@
 <td style="text-align:right">@adv.AdvertiserId</td>
 <td>@adv.AdvertiserName</td>
 <td>
-    @Html.ActionLink("Show:", "Offers", new { advId = @adv.AdvertiserId })
-    @adv.Offers.Count
+    @Html.ActionLink(adv.Offers.Count.ToString() + " offers", "Offers", new { advId = @adv.AdvertiserId })
 </td>
-<td>
-    <a href="#" onclick="SynchOffers(@adv.AdvertiserId); return false">(synch)</a>
+<td id="cmd@(adv.AdvertiserId)">
+    <a href="#" onclick="SynchOffers(@adv.AdvertiserId); return false">(resynch)</a>
 </td>
