DASynchOfferBudgetStats - for single offer

--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Admin.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Admin.cshtml
@@ -15,6 +15,6 @@ Show Offers:
 
 <br /><br />
 
-@Html.ActionLink("Synch Advertisers", "SynchAdvertisers")
+@Html.ActionLink("Sync Advertisers", "SynchAdvertisers")
 <br />
-@Html.ActionLink("Synch Stats for Budgets", "SynchBudgetStats")
+@Html.ActionLink("Sync Stats for Budgets", "SynchBudgetStats")
