--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/AdvertiserRow.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/AdvertiserRow.cshtml
@@ -10,5 +10,5 @@
     @Html.ActionLink(adv.Offers.Count.ToString() + " offers", "Offers", new { advId = @adv.AdvertiserId })
 </td>
 <td id="cmd@(adv.AdvertiserId)">
-    <a href="#" onclick="SynchOffers(@adv.AdvertiserId); return false">(resynch)</a>
+    <a href="#" onclick="SynchOffers(@adv.AdvertiserId); return false">(resync)</a>
 </td>
