--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Show.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Show.cshtml
@@ -5,65 +5,78 @@
 
 <h3>@Html.ActionLink("Budgets", "Start") - Show Offer</h3>
 
-@Html.ActionLink("Edit Budget", "Edit", new { offerId = Model.Offer.OfferId })
-<br /><br />
-
 <fieldset>
     <legend>Offer Details</legend>
     <table>
         <tr>
+            <td>AdMgr</td>
+            <td class="bold">@offer.Advertiser.AdManager.FullName</td>
+        </tr>
+        <tr>
+            <td>AcctMgr</td>
+            <td class="bold">@offer.Advertiser.AccountManager.FullName</td>
+        </tr>
+        <tr>
             <td>@Html.LabelFor(m => m.Offer.Advertiser)</td>
-            <td>@Html.ActionLink(offer.Advertiser.AdvertiserName, "Offers", new { advId = offer.AdvertiserId })</td>
+            <td class="bold">
+                @Html.ActionLink(offer.Advertiser.AdvertiserName, "Offers", new { advId = offer.AdvertiserId })
+            </td>
         </tr>
         <tr>
             <td>@Html.LabelFor(m => m.Offer.OfferId)</td>
-            <td>@Html.DisplayFor(m => m.Offer.OfferId)</td>
+            <td class="bold">@Html.DisplayFor(m => m.Offer.OfferId)</td>
         </tr>
         <tr>
             <td>@Html.LabelFor(m => m.Offer.OfferName)</td>
-            <td>@Html.DisplayFor(m => m.Offer.OfferName)</td>
+            <td class="bold">@Html.DisplayFor(m => m.Offer.OfferName)</td>
         </tr>
         <tr>
             <td>@Html.LabelFor(m => m.Offer.DateCreated)</td>
-            <td>@Html.DisplayFor(m => m.Offer.DateCreated)</td>
-        </tr>
-        <tr>
-            <td>@Html.LabelFor(m => m.Offer.Budget)</td>
-            <td>@Html.DisplayFor(m => m.Offer.Budget, "DecimalComma")</td>
-        </tr>
-        <tr>
-            <td>@Html.LabelFor(m => m.Offer.BudgetStart)</td>
-            <td>@Html.DisplayFor(m => m.Offer.BudgetStart, "Date")</td>
-        </tr>
-        <tr>
-            <td>@Html.LabelFor(m => m.Offer.BudgetEnd)</td>
-            <td>@Html.DisplayFor(m => m.Offer.BudgetEnd, "Date")</td>
+            <td class="bold">@Html.DisplayFor(m => m.Offer.DateCreated)</td>
         </tr>
     </table>
 </fieldset>
 
 <fieldset>
-    <legend>Offer Stats</legend>
+    <legend>Budget Info @Html.ActionLink("[edit]", "Edit", new { offerId = Model.Offer.OfferId })</legend>
+    <table>
+        <tr>
+            <td>@Html.LabelFor(m => m.Offer.Budget)</td>
+            <td class="bold">@Html.DisplayFor(m => m.Offer.Budget, "DecimalComma")</td>
+        </tr>
+        <tr>
+            <td>@Html.LabelFor(m => m.Offer.BudgetStart)</td>
+            <td class="bold">@Html.DisplayFor(m => m.Offer.BudgetStart, "Date")</td>
+        </tr>
+        <tr>
+            <td>@Html.LabelFor(m => m.Offer.BudgetEnd)</td>
+            <td class="bold">@Html.DisplayFor(m => m.Offer.BudgetEnd, "Date")</td>
+        </tr>
+    </table>
+</fieldset>
+
+<fieldset>
+    <legend>Cake Stats @Html.ActionLink("[resync]", "SynchStats", new { offerId = offer.OfferId })</legend>
     <table>
         <tr>
             <td>From</td>
-            <td>@Html.DisplayFor(m => m.EarliestStatDate, "Date")</td>
+            <td class="bold">@Html.DisplayFor(m => m.EarliestStatDate, "Date")</td>
         </tr>
         <tr>
             <td>To</td>
-            <td>@Html.DisplayFor(m => m.LatestStatDate, "Date")</td>
+            <td class="bold">@Html.DisplayFor(m => m.LatestStatDate, "Date")</td>
         </tr>
         <tr>
             <td>Revenue</td>
-            <td>@Html.DisplayFor(m => m.Revenue, "DecimalComma")</td>
+            <td class="bold">@Html.DisplayFor(m => m.Revenue, "DecimalComma")</td>
         </tr>
         <tr>
             <td>Clicks</td>
-            <td>@Html.DisplayFor(m => m.Clicks, "IntComma")</td>
+            <td class="bold">@Html.DisplayFor(m => m.Clicks, "IntComma")</td>
         </tr>
         <tr>
             <td>Conversions</td>
-            <td>@Html.DisplayFor(m => m.Conversions, "IntComma")</td>
+            <td class="bold">@Html.DisplayFor(m => m.Conversions, "IntComma")</td>
         </tr>
     </table>
 </fieldset>
@@ -73,14 +86,11 @@
     <table>
         <tr>
             <td>Budget Remaining</td>
-            <td>@Html.DisplayFor(m => m.BudgetRemaining, "DecimalComma")</td>
+            <td class="bold">@Html.DisplayFor(m => m.BudgetRemaining, "DecimalComma")</td>
         </tr>
         <tr>
             <td>Percent Used</td>
-            <td>@Html.DisplayFor(m => m.BudgetUsedPercent, "Percent")</td>
+            <td class="bold">@Html.DisplayFor(m => m.BudgetUsedPercent, "Percent")</td>
         </tr>
     </table>
 </fieldset>
-
-<br />
-@Html.ActionLink("Synch Stats (from DateCreated)", "SynchStats", new { offerId = offer.OfferId })
