--- a/3/DirectAgents.Web/DirectAgents.Web/Content/DA.css
+++ b/3/DirectAgents.Web/DirectAgents.Web/Content/DA.css
@@ -6,6 +6,15 @@ input[type="text"] {
     width: 400px;
 }
 
+table.editable input[type="text"] {
+    width: 100px;
+}
+
 .bold {
+    font-weight: bold;
+}
+
+.validation-summary-errors {
+    color: #e80c20;
     font-weight: bold;
 }
