--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/OfferRow.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/OfferRow.cshtml
@@ -1,26 +1,63 @@
 ﻿@model DirectAgents.Domain.Entities.Cake.Offer
 @{
     var offer = Model;
+    bool? wantEditMode = ViewBag.EditMode;
+    if ((wantEditMode == null || wantEditMode.Value == true) && (!offer.HasBudget))
+    {
+        var budget = offer.OfferBudget; // create a budget
+        budget.Start = DateTime.Today;
+        budget.End = DateTime.Today.AddMonths(1);
+    }
+    bool editMode = wantEditMode ?? false;
+    if (wantEditMode == null)
+    {
+        editMode = (offer.Budget.Value == 0);
+    }
 }
 
 <td>@offer.Advertiser.AdvertiserNameTrimmed(12)</td>
 <td style="text-align:right">@offer.OfferId</td>
 <td>@Html.ActionLink(offer.OfferName, "Show", new { offerId = offer.OfferId })</td>
 <td style="text-align:right">
-    @Html.ActionLink("edit", "Edit", new { offerId = offer.OfferId })
-</td>
-<td style="text-align:right">
-    @if (offer.Budget.HasValue)
+    @if (editMode)
     {
-        @offer.Budget.Value.ToString("N2")
+        @Html.TextBoxFor(m => m.Budget, new { id = (string)null })
     }
     else
     {
-        <a href="#" onclick="InitOffer(@offer.OfferId); return false">initialize</a>
+        @offer.Budget.Value.ToString("N2")
     }
 </td>
-<td>@Html.DisplayFor(m => m.BudgetStart, "Date")</td>
-<td>@Html.DisplayFor(m => m.BudgetEnd, "Date")</td>
+<td>
+    @if (editMode)
+    {
+        @Html.EditorFor(m => m.BudgetStart, "Date", new { id = (string)null })
+    }
+    else
+    {
+        @Html.DisplayFor(m => m.BudgetStart, "Date")
+    }
+</td>
+<td>
+    @if (editMode)
+    {
+        @Html.EditorFor(m => m.BudgetEnd, "Date", new { id = (string)null })
+    }
+    else
+    {
+        @Html.DisplayFor(m => m.BudgetEnd, "Date")
+    }
+</td>
+<td>
+    @if (editMode)
+    {
+        <input type="button" value="Save" onclick="SaveBudgetRow(@offer.OfferId)" data-offer-id="@offer.OfferId" />
+    }
+    else
+    {
+        <input type="button" value="Edit" onclick="LoadBudgetRow(@offer.OfferId, false, true)" />
+    }
+</td>
 <td style="text-align:right">
     @if (offer.BudgetUsed.HasValue)
     {
