--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Start.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Start.cshtml
@@ -18,9 +18,8 @@
         </td>
         <td>
             @Html.ActionLink("show all", "Offers", new { am = contact.ContactId }) |
-            @Html.ActionLink("with budgets", "Offers", new { am = contact.ContactId, withBudget = true }) |
-            @Html.ActionLink("85%", "Offers", new { am = contact.ContactId, withBudget = true, minPercent = 85 }) |
-            @Html.ActionLink("100%", "Offers", new { am = contact.ContactId, withBudget = true, minPercent = 100 })
+            @Html.ActionLink("85% spent", "Offers", new { am = contact.ContactId, withBudget = true, minPercent = 85 }) |
+            @Html.ActionLink("100% spent", "Offers", new { am = contact.ContactId, withBudget = true, minPercent = 100 })
         </td>
     </tr>
 }
