--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Admin.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/Admin.cshtml
@@ -15,6 +15,8 @@ Show Offers:
 
 <br /><br />
 
-@Html.ActionLink("Sync Advertisers", "SynchAdvertisers")
+@Html.ActionLink("Synch Advertisers", "SynchAdvertisers")
 <br />
-@Html.ActionLink("Sync Stats for Budgets", "SynchBudgetStats")
+@Html.ActionLink("Synch Active Offers", "SynchOffers", new { advId = 0 })
+<br />
+@Html.ActionLink("Synch Stats for Budgets", "SynchBudgetStats")
