--- a/1/EomTool/EomToolWeb/Content/Site.css
+++ b/1/EomTool/EomToolWeb/Content/Site.css
@@ -300,11 +300,13 @@ ul#menu li a
 ul#menu li.selitem a
 {
     color: #933;
+    font-weight: bold;
 }
 
 ul#menu span.parentselitem
 {
     color: #933;
+    font-weight: bold;
 }
 
 ul#menu li a:hover
@@ -715,7 +717,7 @@ th a
 th a:link, th a:visited, th a:active, th a:hover
 {
     color: #333;
-    font-weight: 600;
+/*    font-weight: 600;*/
     text-decoration: none;
     padding: 0;
 }
