--- a/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
@@ -27,7 +27,12 @@
 <body>
     <div style="position: fixed; top: 0; width: 100%; height: 41px; z-index: 500;">
         <ul id="menu" style="text-align: left; margin-bottom: 0;">
-            <li class="@(ViewBag.MenuItem == "ByCountry" ? "selitem" : "")">@Html.ActionLink("By Country", "ListByCountry", "Campaigns")</li>
+            <li><span class="@(ViewBag.ParentMenuItem == "List" ? "parentselitem" : "")">List</span>
+                <ul>
+                    <li class="@(ViewBag.MenuItem == "ByCountry" ? "selitem" : "")">@Html.ActionLink("By Country", "ListByCountry", "Campaigns")</li>
+                    <li class="@(ViewBag.MenuItem == "Sortable" ? "selitem" : "")">@Html.ActionLink("Sortable", "ListSortable", "Campaigns")</li>
+                </ul>
+            </li>
             <li class="@(ViewBag.MenuItem == "US" ? "selitem" : "")">@Html.ActionLink("US", "List2", "Campaigns", new { country = "US" }, null)</li>
             <li id="MenuCPM" class="@(ViewBag.MenuItem == "CPM" ? "selitem" : "")">@Html.ActionLink("CPM", "List2", "Campaigns", new { search = "CPM" }, null)</li>
             <li id="MenuAll" class="@(ViewBag.MenuItem == "All" ? "selitem" : "")">@Html.ActionLink("All", "List2", "Campaigns")</li>
