--- a/1/EomTool/EomToolWeb/Views/Campaigns/ListSortable.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/ListSortable.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CampaignViewModel>
 
 @{
-    ViewBag.Title = "Campaigns Sortable";
+    ViewBag.Title = "Campaign Budgets";
     ViewBag.ParentMenuItem = "List";
     ViewBag.MenuItem = "Sortable";
     ViewBag.NoSearch = true;
